--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bg">
+    android:orientation="vertical"
+    android:background="@drawable/back1">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="KE-NTDs"
-        android:textColor="@color/orchid"
+        android:text="@string/ke_ntds"
+        android:textColor="@color/white"
         android:textSize="34sp"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.059" />
+        android:layout_marginBottom="50dp"/>
 
     <TextView
-        android:id="@+id/txtRegister"
+        android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:layout_below="@id/textView"
+        android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.096" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"/>
 
     <EditText
         android:id="@+id/edtRegUsername"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="10dp"
+        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:drawablePadding="5dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
         android:paddingTop="20dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:textColor="@color/white"
+        android:textSize="24sp"
         android:textColorHint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
-        app:layout_constraintVertical_bias="0.164" />
+        android:layout_below="@id/txtLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edtRegPassword"
@@ -65,44 +60,43 @@
         android:layout_height="50dp"
         android:ems="10"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_baseline_security_24"
+        android:drawableStart="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        android:paddingTop="20dp"
+        android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:textColor="@color/white"
+        android:textSize="24sp"
         android:textColorHint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtRegUsername"
-        app:layout_constraintVertical_bias="0.153" />
+        android:layout_below="@id/edtRegUsername"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:text="Login"
+        android:text="@string/login"
         android:background="@drawable/btn_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtRegPassword"
-        app:layout_constraintVertical_bias="0.218" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/edtRegPassword"
+        android:layout_marginBottom="50dp"/>
 
     <TextView
         android:id="@+id/txtRegLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New use, register"
+        android:text="@string/new_use_register"
         android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:layout_centerHorizontal="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@+id/btnRegister" />
+</RelativeLayout>
