--- a/app/src/main/res/layout/fragment_cases.xml
+++ b/app/src/main/res/layout/fragment_cases.xml
@@ -5,13 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".CasesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/cases"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/white"/>
+        android:layout_height="match_parent" />
 
 </FrameLayout>
