--- a/app/src/main/res/layout/activity_diagnosis.xml
+++ b/app/src/main/res/layout/activity_diagnosis.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/back2"
     android:orientation="vertical"
-    tools:context=".Treatment">
+    tools:context=".DiagnosisActivity">
 
-    <View
-        android:id="@+id/top_view"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/bg_view"/>
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:src="@drawable/medical" />
 
     <GridLayout
         android:layout_width="match_parent"
