--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -10,7 +10,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:hint="@string/case_type"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <AutoCompleteTextView
@@ -44,7 +46,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textSize="24sp"
@@ -63,8 +67,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_bg"
         android:text="@string/report_case"
-        android:textSize="24sp"
-        android:layout_marginTop="36dp"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
         android:layout_gravity="center"/>
 
 </LinearLayout>
